--- a/.github/workflows/staging-sync.yml
+++ b/.github/workflows/staging-sync.yml
@@ -11,6 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
 
+    strategy:
+      matrix:
+        region: [US, CA]
+
+    env:
+      # Map region to environment variables and secrets
+      BR_SHOPIFY_URL: ${{ vars[format('BR_SHOPIFY_URL_{0}', matrix.region)] }}
+      BR_ENVIRONMENT_NAME: ${{ vars[format('BR_ENVIRONMENT_NAME_{0}', matrix.region)] }}
+      BR_ACCOUNT_ID: ${{ vars[format('BR_ACCOUNT_ID_{0}', matrix.region)] }}
+      BR_CATALOG_NAME: ${{ vars[format('BR_CATALOG_NAME_{0}', matrix.region)] }}
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -23,15 +34,15 @@ jobs:
           python -m pip install -r requirements.txt
       - name: Get current date for runnum
         id: date
-        run: echo "RUNNUM=$(date +'%Y%m%d-%H%M%S')" >> "$GITHUB_ENV"
+        run: echo "RUNNUM=$(date +'%Y%m%d-%H%M%S')-${{ matrix.region }}-DEV" >> "$GITHUB_ENV"
       - name: Make run data directory
         run: mkdir ${{ env.RUNNUM }}
       - name: GraphQL Bulk Operation Export
         run: |
           python src/graphql.py
         env:
-          BR_SHOPIFY_URL: ${{ vars.BR_SHOPIFY_URL }}
-          BR_SHOPIFY_PAT: ${{ secrets.BR_SHOPIFY_PAT }}
+          BR_SHOPIFY_URL: ${{ env.BR_SHOPIFY_URL }}
+          BR_SHOPIFY_PAT: ${{ secrets[format('BR_SHOPIFY_PAT_DEV_{0}', matrix.region)] }}
           BR_OUTPUT_DIR: "./${{ env.RUNNUM }}/"
       - name: Transform to Shopify aggregated products
         run: |
@@ -43,22 +54,22 @@ jobs:
         run: |
           python src/bloomreach_products.py --input-file=./${{ env.RUNNUM }}/2_bloomreach_base.jsonl.gz --output-file=./${{ env.RUNNUM }}/3_bloomreach_products.jsonl.gz
         env:
-          BR_SHOPIFY_URL: ${{ vars.BR_SHOPIFY_URL }}
+          BR_SHOPIFY_URL: ${{ env.BR_SHOPIFY_URL }}
       - name: Transform to discovery patch
         run: |
           python src/patch.py --input-file=./${{ env.RUNNUM }}/3_bloomreach_products.jsonl.gz --output-file=./${{ env.RUNNUM }}/4_bloomreach_patch.jsonl.gz
         env:
-          BR_SHOPIFY_URL: ${{ vars.BR_SHOPIFY_URL }}
+          BR_SHOPIFY_URL: ${{ env.BR_SHOPIFY_URL }}
       - name: Update all records
         run: |
           python src/feed.py --input-file=./${{ env.RUNNUM }}/4_bloomreach_patch.jsonl.gz
         env:
-          BR_ENVIRONMENT_NAME: ${{ vars.BR_ENVIRONMENT_NAME }}
-          BR_ACCOUNT_ID: ${{ vars.BR_ACCOUNT_ID }}
-          BR_CATALOG_NAME: ${{ vars.BR_CATALOG_NAME }}
-          BR_API_TOKEN: ${{ secrets.BR_API_TOKEN }}
+          BR_ENVIRONMENT_NAME: ${{ vars.BR_ENVIRONMENT_NAME_DEV }}
+          BR_ACCOUNT_ID: ${{ env.BR_ACCOUNT_ID }}
+          BR_CATALOG_NAME: ${{ env.BR_CATALOG_NAME }}
+          BR_API_TOKEN: ${{ secrets[format('BR_API_TOKEN_{0}', matrix.region)] }}
       - name: Archive data files
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.RUNNUM }}-data-files-data-files
+          name: ${{ env.RUNNUM }}-data-files
           path: ${{ env.RUNNUM }}/*
