--- a/.github/workflows/staging-sync.yml
+++ b/.github/workflows/staging-sync.yml
@@ -1,8 +1,8 @@
 name: Staging Catalog Sync
 
 on: 
-    # schedule:
-    #    - cron: '30 5,17 * * *'
+  schedule:
+    - cron: '0 */3 * * *'  # Runs every 3 hours'
   workflow_dispatch:
 
 jobs:
