--- a/.github/workflows/production-sync.yml
+++ b/.github/workflows/production-sync.yml
@@ -1,13 +1,12 @@
 name: Production Catalog Sync
 
-on: 
+on:
   schedule:
-    - cron: '0 */3 * * *'  # Runs every 3 hours'
+    - cron: "0 */1 * * *" # Runs every 1 hour
   workflow_dispatch:
 
 jobs:
   update-all-records-production:
-
     runs-on: ubuntu-latest
     environment: production
 
@@ -27,7 +26,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-          cache: 'pip'
+          cache: "pip"
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
